<?xml version="1.0"?>
<package format="2">
  <name>rclrs</name>
  <version>0.0.3</version>
  <description>Package containing the Rust client.</description>
  <author email="esteve@apache.org">Esteve Fernandez</author>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>cargo-ros-install</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rclrs_common</build_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
